<resources>
    <string name="app_name">Geo Map</string>
    <string name="todo">TO DO</string>
    <string name="ResponseCodesuccess">200</string>
    <string name="ResponseCodefail">401</string>
    <string name="ResponseCodeDeleted">403</string>
    <string name="no_server_found">You are not currently connected to internet. Please try again.!</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back_you_ve_been_missed">Harnessing the full potential of resource mining</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="date_of_birth">DOB</string>
    <string name="profile">Profile</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseFromGallary">Choose From Gallery</string>
    <string name="addPhoto">Add Photo!</string>
    <string name="removeProfilePicture">Remove Profile Picture</string>
    <string name="cancel_small">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="not_now">Not Now</string>
    <string name="pls_provide_valid_email">Please provide us with a valid email ID</string>
    <string name="pls_provide_valid_password">Password should contain at least one lowercase, one special symbol and minimum 8 character long</string>
    <string name="invalid_password_less_than_8_chars">Password should be more than 8 characters</string>
    <string name="invalid_password_not_mix_of_char_types">Password must contain lowercase, digits and special characters</string>
    <string name="check_dob">You must be 18 years or above in order to access the app</string>
    <string name="underground_report_list">Underground Report List</string>
    <string name="underground_report_list_draft">Underground Report List Draft</string>
    <string name="opencast_report_list">OpenCast Report List</string>
    <string name="opencast_report_list_draft">OpenCast Report List Draft</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sync_data">Sync Data</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="log_out">Logout</string>
    <string name="logout_quotes">Are you sure your wish to logout of the app?</string>
    <string name="contact_us">Contact Us</string>
    <string name="undergrounds_mapping_report">Underground Mapping Report</string>
    <string name="view_all">View All</string>
    <string name="opencast_mapping_report">OpenCast Mapping Report</string>
    <string name="opencast_mapping_report_draft">OpenCast Mapping Report Draft</string>
    <string name="undergrounds_mapping_report_draft">Underground Mapping Report Draft</string>
    <string name="add_report">Add Report</string>
    <string name="support_quotes">Please contact support at</string>
    <string name="support_link">info@geomap.in</string>
    <string name="ok">ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="no_result_found">No result found</string>
    <string name="no_data_found">No data found</string>
    <string name="t_n_csf">T&amp;Cs</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="chatSupport">Start Your Chat Now</string>
    <string name="how_refer_works">How Refer Works</string>
    <string name="add_under_ground_mapping_report">Underground Mapping</string>
    <string name="add_opencast_mapping_report">OpenCast Mapping</string>
    <string name="undergrounds_mapping_report_details">Underground Mapping Report Details</string>
    <string name="opencast_mapping_report_details">OpenCast Mapping Report Details</string>
    <string name="geological_attributes">Geological Attributes</string>
    <string name="select_attributes">Select Attributes</string>
    <string name="select_nos">Select Nos</string>
    <string name="geological_mapping">Geological Mapping</string>
    <string name="opencast_mapping">Open Cast Mapping</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile no</string>
    <string name="delete_account">Delete Account</string>
    <string name="view_pdf">View PDF</string>
    <string name="mapping_sheet_no">Mapping sheet no</string>
    <string name="map_serial_no">Map serial no.</string>
    <string name="date">Date:</string>
    <string name="date_">Date</string>
    <string name="shift">Shift:</string>
    <string name="shift_">Shift</string>
    <string name="mapped_by">Mapped by:</string>
    <string name="mapped_by_">Mapped by</string>
    <string name="scale">Scale</string>
    <string name="scale_">Scale</string>
    <string name="location">Location:</string>
    <string name="location_">Location</string>
    <string name="vein_load">Vein/load:</string>
    <string name="x_coordinate">X coordinate:</string>
    <string name="x_coordinate_">X coordinate</string>
    <string name="y_coordinate">Y coordinate:</string>
    <string name="y_coordinate_">Y coordinate</string>
    <string name="z_coordinate">Z coordinate:</string>
    <string name="z_coordinate_">Z coordinate</string>
    <string name="attributes">Attributes:</string>
    <string name="attributes_">Attributes</string>
    <string name="nos">Nos:</string>
    <string name="nos_">Nos</string>
    <string name="properties">Properties:</string>
    <string name="properties_">Properties</string>
    <string name="mine_site_name">Mine site name:</string>
    <string name="pit_name">Pit name:</string>
    <string name="pit_name_">Pit name</string>
    <string name="pit_location">Pit location:</string>
    <string name="pit_location_">Pit location</string>
    <string name="shift_incharge_name">Shift incharge name:</string>
    <string name="shift_incharge_name_">Shift incharge name</string>
    <string name="geologist_name">Geologist name:</string>
    <string name="geologist_name_">Geologist name</string>
    <string name="mapping_parameters">Mapping parameters:</string>
    <string name="mapping_parameters_">Mapping parameters</string>
    <string name="face_location">Face location:</string>
    <string name="face_location_">Face location</string>
    <string name="face_length_m">Face length (m):</string>
    <string name="face_length_m_">Face length (m)</string>
    <string name="face_area_m2">Face area (m2):</string>
    <string name="face_area_m2_">Face area (m2)</string>
    <string name="face_rock_types">Face rock types:</string>
    <string name="face_rock_types_">Face rock types</string>
    <string name="bench_rl">Bench RL</string>
    <string name="bench_rl_">Bench RL</string>
    <string name="bench_angle">Bench angle:</string>
    <string name="bench_angle_">Bench angle</string>
    <string name="dip_direction_and_angle">Dip direction and angle:</string>
    <string name="dip_direction_and_angle_">Dip direction and angle</string>
    <string name="thickness_of_ore_coal_seam">Thickness of ore (Coal seam):</string>
    <string name="thickness_of_ore_coal_seam_">Thickness of ore (Coal seam)</string>
    <string name="thiness_of_overburden_m">Thickness of overburden (m):</string>
    <string name="thiness_of_overburden_m_">Thickness of overburden (m)</string>
    <string name="thickness_of_interburden_m">Thickness of interburden (m):</string>
    <string name="thickness_of_interburden_m_">Thickness of interburden (m)</string>
    <string name="observed_grade_of_ore">Observed grade of ore:</string>
    <string name="observed_grade_of_ore_">Observed grade of ore</string>
    <string name="actual_grade_of_ore_lab_grade">Actual grade of ore (Lab grade):</string>
    <string name="actual_grade_of_ore_lab_grade_">Actual grade of ore (Lab grade)</string>
    <string name="weathering">Weathering:</string>
    <string name="weathering_">Weathering</string>
    <string name="rock_strength">Rock strength:</string>
    <string name="rock_strength_">Rock strength</string>
    <string name="water_condition">Water condition:</string>
    <string name="water_condition_">Water condition</string>
    <string name="type_of_geological_structures">Type of geological structures:</string>
    <string name="type_of_geological_structures_">Type of geological structures</string>
    <string name="type_of_faults">Type of faults:</string>
    <string name="type_of_faults_">Type of faults</string>
    <string name="project_maining_pdf">Project Maining PDF</string>
    <string name="project_maining_data_file">Project Maining\n Data File</string>
    <string name="submit">Submit</string>
    <string name="next_step">Next Step</string>
    <string name="add_attributes">Add Attributes</string>
    <string name="roof">Roof</string>
    <string name="face">Face</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="mineralization">Mineralization</string>
    <string name="mineralization_1">Mineralization 1</string>
    <string name="add_description">Add description....</string>
    <string name="mapping_sheet_no_1523">Mapping Sheet No: 1523</string>
    <string name="mines_site_name">Mines site name</string>
    <string name="bench_height_amp_width_m">Bench height &amp; width (m):</string>
    <string name="bench_height_amp_width_m_">Bench height &amp; width (m)</string>
    <string name="sample_collected">Sample collected</string>
    <string name="notes">Notes</string>
    <string name="geologist_sign">Geologist Sign</string>
    <string name="client_s_geologist_sign">Client’s Geologist Sign</string>
    <string name="night_shift">Night shift</string>
    <string name="day_shift">Day shift</string>
    <string name="data">DATA</string>
    <string name="vein_load_">Vein/load</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="clear">Clear</string>
    <string name="clear_roof">Clear Roof</string>
    <string name="clear_left">Clear Left</string>
    <string name="clear_right">Clear Right</string>
    <string name="clear_face">Clear Face</string>
    <string name="clear_geologist_signature">Clear Geologist Signature</string>
    <string name="clear_geologist_client_signature">Clear Client’s Geologist Signature</string>
    <string name="choose_your_attributes">Choose your attributes</string>
    <string name="choose_your_nos">Choose your nos</string>
    <string name="choose_your_sample_collected">Choose your sample collected</string>
    <string name="choose_your_weathering">Choose your weathering</string>
    <string name="choose_your_rock_strength">Choose your rock strength</string>
    <string name="choose_your_water_condition">Choose your water condition</string>
    <string name="choose_your_type_of_geological_structures">Choose your type of geological structures</string>
    <string name="choose_your_Type_of_faults">Choose your type of faults</string>
    <string name="pls_select_weathering">Please select weathering</string>
    <string name="pls_select_rock_strength">Please select rock strength</string>
    <string name="pls_select_water_condition">Please select water condition</string>
    <string name="pls_select_type_of_geological_structures">Please select type of geological structures</string>
    <string name="pls_select_type_of_faults">Please select type of faults</string>
    <string name="pls_add_geologist_sign">Please add geologist sign</string>
    <string name="pls_add_geologist_client_sign">Please add geologist client sign</string>
    <string name="pls_select_your_attributes">Search your attributes</string>
    <string name="pls_select_your_nos">Search your nos</string>
    <string name="pls_select_your_sample_collected">Search your sample collected</string>
</resources>