<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.geomap.utils.Converter" />

        <variable
            name="ocDetail"
            type="com.geomap.mapReportModule.models.OpenCastDetailsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        tools:context=".mapReportModule.activities.openCastModule.OpenCastDetailActivity">

        <ImageView
            android:id="@+id/llBack"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_20sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_left_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvHeaderTitle"
            style="@style/screenTitle1"
            android:text="@string/opencast_mapping_report_details"
            app:layout_constraintEnd_toStartOf="@+id/llEdit"
            app:layout_constraintStart_toEndOf="@+id/llBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/llEdit"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_16sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_edit_icon_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_56sdp"
            android:layout_marginBottom="@dimen/_96sdp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderTitle">

            <LinearLayout
                android:id="@+id/llMainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:paddingVertical="@dimen/_10sdp">

                        <TextView
                            style="@style/title"
                            android:text="@string/mapping_sheet_no" />

                        <TextView
                            android:id="@+id/tvMappingSheetNo"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.mappingSheetNo)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/tvDate"
                            style="@style/subTitle" />

                        <TextView
                            style="@style/title"
                            android:text="@string/mine_site_name" />

                        <TextView
                            android:id="@+id/tvMineSiteName"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.minesSiteName)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/pit_name" />

                        <TextView
                            android:id="@+id/tvPitName"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.pitName)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/pit_location" />

                        <TextView
                            android:id="@+id/tvPitLocation"
                            style="@style/subTitle"
                            android:gravity="start"
                            android:text="@{Converter.format(ocDetail.responseData.pitLoaction)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/shift" />

                        <TextView
                            android:id="@+id/tvShift"
                            style="@style/subTitle"
                            android:text="@{ocDetail.responseData.shift}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/shift_incharge_name" />

                        <TextView
                            android:id="@+id/tvShiftInchargeName"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.shiftInchargeName)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/geologist_name" />

                        <TextView
                            android:id="@+id/tvGeologistName"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.geologistName)}" />


                        <TextView
                            style="@style/title"
                            android:text="@string/mapping_parameters"
                            android:visibility="gone" />

                        <TextView
                            style="@style/title"
                            android:text="@string/face_location" />

                        <TextView
                            android:id="@+id/tvFaceLocation"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.faceLocation)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/face_length_m" />

                        <TextView
                            android:id="@+id/tvFaceLength"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.faceLength)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/face_area_m2" />

                        <TextView
                            android:id="@+id/tvFaceArea"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.faceArea)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/face_rock_types" />

                        <TextView
                            android:id="@+id/tvFaceRockTypes"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.faceRockType)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/bench_rl" />

                        <TextView
                            android:id="@+id/tvBenchRL"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.benchRl)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/bench_height_amp_width_m" />

                        <TextView
                            android:id="@+id/tvBenchHeightWidth"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.benchHeightWidth)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/bench_angle" />

                        <TextView
                            android:id="@+id/tvBenchAngle"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.benchAngle)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/dip_direction_and_angle" />

                        <TextView
                            android:id="@+id/tvDipDirectionAngle"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.dipDirectionAndAngle)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/thickness_of_ore_coal_seam" />

                        <TextView
                            android:id="@+id/tvThicknessOfOre"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.thicknessOfOre)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/thiness_of_overburden_m" />

                        <TextView
                            android:id="@+id/tvThinessOfOverburden"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.thicknessOfOverburdan)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/thickness_of_interburden_m" />

                        <TextView
                            android:id="@+id/tvThicknessOfInterburden"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.thicknessOfInterburden)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/observed_grade_of_ore" />

                        <TextView
                            android:id="@+id/tvObservedGradeOfOre"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.observedGradeOfOre)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/sample_collected" />

                        <TextView
                            android:id="@+id/tvSampleCollected"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.sampleColledted)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/actual_grade_of_ore_lab_grade" />

                        <TextView
                            android:id="@+id/tvActualGradeOfOre"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.actualGradeOfOre)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/weathering" />

                        <TextView
                            android:id="@+id/tvWeathering"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.weathring)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/rock_strength" />

                        <TextView
                            android:id="@+id/tvRockStrength"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.rockStregth)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/water_condition" />

                        <TextView
                            android:id="@+id/tvWaterCondition"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.waterCondition)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/type_of_geological_structures" />

                        <TextView
                            android:id="@+id/tvTypeOfGeologicalStructures"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.typeOfGeologist)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/type_of_faults" />

                        <TextView
                            android:id="@+id/tvTypeOfFaults"
                            style="@style/subTitle"
                            android:text="@{Converter.format(ocDetail.responseData.typeOfFaults)}" />

                        <TextView
                            style="@style/title"
                            android:text="@string/notes_" />

                        <TextView
                            android:id="@+id/tvNotes"
                            style="@style/subTitle"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:text="@{Converter.format(ocDetail.responseData.notes)}" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/subTitleHead"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/geologist_sign" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_2sdp">


                    <ImageView
                        android:id="@+id/imgGeologistSign"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/subTitleHead"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/client_s_geologist_sign" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_2sdp">


                    <ImageView
                        android:id="@+id/imgClientGeologistSign"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/subTitleHead"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/image" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_2sdp">


                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnViewPdf"
            style="@style/screenButton"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/enable_button"
            android:enabled="true"
            android:text="@string/view_pdf"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/screenProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/progressBarHolder"
            style="@style/screenFrameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
